@@ -5,6 +5,8 @@
   * Fix for @memberOf when applied to inner members. ( issue #264 )
   * Fix for @memberOf when applied to symbols documented with @name. ( issue #260 )
   * Applied patch from kunhualqk, fix for bug where @link to borrowed member did not resolve to parent class. ( issue #218 )
+  * Fix for @requires not linking back to the required class
+  * Added experimental support for @constructs to have an argument, the class name, when applied to a function assignment.
 
 == 2.3.2 ==
 
